--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,10 +1,10 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
-    id "io.freefair.lombok" version "8.10.2"
+    id 'io.freefair.lombok'
 }
 
-apply plugin: 'java'
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
