--- a/api/src/main/resources/application-local.yml
+++ b/api/src/main/resources/application-local.yml
@@ -8,6 +8,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  sql:
+    init:
+      data-locations: classpath:database/data.sql
   jpa:
     show-sql: true
     hibernate:
@@ -16,6 +19,8 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+    defer-datasource-initialization: true
+    database-platform: org.hibernate.dialect.H2Dialect
 logging:
   level:
     org.hibernate.type: trace
