--- a/api/src/main/resources/application-local.yml
+++ b/api/src/main/resources/application-local.yml
@@ -1,4 +1,10 @@
 spring:
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+  cache:
+    type: redis
   datasource:
     url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
@@ -21,6 +27,7 @@ spring:
         show_sql: true
     defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.H2Dialect
+
 logging:
   level:
     org.hibernate.type: trace
