--- a/api/src/test/resources/application-test.yml
+++ b/api/src/test/resources/application-test.yml
@@ -1,4 +1,10 @@
 spring:
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+  cache:
+    type: redis
   datasource:
     url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
